# SOFTX-D-21-00041

./: .gitignore  .gitlab-ci.yml  .headers_for_c.txt  .headers_for_cmake.txt  AUTHORS  CMakeLists.txt  README.md  headers_update.py  uca_config.hh.in
benchmarks/: CMakeLists.txt  README.md  plotting_utils.py
benchmarks/TPV101/: CMakeLists.txt  README.md  TPV101.cc  TPV101.sh  inspect_results.py  result_summary.py
benchmarks/TPV101/ref/: README.md  crawler.py
benchmarks/TPV102/: CMakeLists.txt  README.md  TPV102.cc  TPV102.sh  inspect_results.py
benchmarks/TPV102/ref/: README.md  crawler.py
benchmarks/TPV103/: CMakeLists.txt  README.md  TPV103.cc  TPV103.sh  inspect_results.py
benchmarks/TPV103/ref/: README.md  crawler.py
benchmarks/TPV104/: CMakeLists.txt  README.md  TPV104.cc  TPV104.sh  inspect_results.py
benchmarks/TPV104/ref/: README.md  crawler.py
benchmarks/TPV205/: CMakeLists.txt  README.md  TPV205-2D.cc  TPV205.cc  TPV205.sh  inspect_results.py
benchmarks/TPV205/ref/: README.md  crawler.py
benchmarks/TPV3/: CMakeLists.txt  TPV3-2D.cc  TPV3.cc  TPV3.sh  TPV3_runner.sub  inspect_results.py  space_time_compare_TPV3.py
cmake/: ugucaBuildTreeSettings.cmake.in  ugucaConfig.cmake.in
cmake/Modules/: FindFFTW.cmake  FindSphinx.cmake
doc/: CMakeLists.txt
doc/dev-doc/: CMakeLists.txt  conf.py.in  index.rst
doc/dev-doc/src/: FFTW.rst  algo.rst  developer_guide.rst  example_interface.cc  example_interface.hh  example_law.cc  example_law.hh  getting_started.rst  interface_laws.rst  license.rst  references.rst  user_guide.rst
examples/: CMakeLists.txt  basic_example.cc  basic_example_plot.py  fracture_2d_example.cc  fracture_2d_example.in  fracture_2d_example.sh  fracture_2d_example_fig.py  fracture_2d_example_plot.py  fracture_3d_example.cc  fracture_3d_example.in  fracture_3d_example.sh  fracture_3d_example_plot.py  friction_2d_example.cc  friction_2d_example.in  friction_2d_example.sh  friction_2d_example_plot.py
kernels/: README.md  h22.txt  kernel_io.py  kernel_plotter.py  laplace_inverse.py  nu0.25_h01.txt  nu0.25_h11.txt  nu0.33_h00.txt  nu0.33_h01.txt  nu0.33_h11.txt  nu0.33_pstress_h00.txt  nu0.33_pstress_h01.txt  nu0.33_pstress_h11.txt  nu0.35_h00.txt  nu0.35_h01.txt  nu0.35_h11.txt
kernels/tcut200/: h22.txt  kernel_plotter.py  laplace_inverse.py  nu0.33_pstress_h00.txt  nu0.33_pstress_h01.txt  nu0.33_pstress_h11.txt
kernels/tcut300/: h22.txt  nu0.33_pstress_h00.txt  nu0.33_pstress_h01.txt  nu0.33_pstress_h11.txt
src/: CMakeLists.txt  bimat_interface.cc  bimat_interface.hh  defrig_interface.cc  defrig_interface.hh  fftable_nodal_field.cc  fftable_nodal_field.hh  half_space.cc  half_space.hh  infinite_boundary.cc  infinite_boundary.hh  interface.cc  interface.hh  interface_law.cc  interface_law.hh  kernel.cc  kernel.hh  kernel_collection.cc  kernel_collection.hh  limited_history.cc  limited_history.hh  material.cc  material.hh  nodal_field.cc  nodal_field.hh  precomputed_kernel.cc  precomputed_kernel.hh  preint_kernel.cc  preint_kernel.hh  static_communicator_mpi.cc  static_communicator_mpi.hh  static_communicator_mpi_inline_impl.hh  uca_common.hh  uca_dumper.cc  uca_dumper.hh  uca_mesh.cc  uca_mesh.hh  uca_parameter_reader.cc  uca_parameter_reader.hh  unimat_shear_interface.cc  (+1 more)
src/interface_laws/: barras_law.cc  barras_law.hh  linear_coulomb_friction_law.cc  linear_coulomb_friction_law.hh  linear_shear_cohesive_law.cc  linear_shear_cohesive_law.hh  rate_and_state_law.cc  rate_and_state_law.hh
test/: CMakeLists.txt  test_barras_law.cc  test_bimat_interface.cc  test_defrig_interface.cc  test_dumper.cc  test_fftable_nodal_field.cc  test_fftable_nodal_field.mpi.sh  test_half_space.cc  test_half_space.mpi.sh  test_infinite_boundary.cc  test_infinite_boundary.mpi.sh  test_interface.cc  test_kernel_collection.cc  test_limited_history.cc  test_linear_coulomb_friction_law.cc  test_linear_shear_cohesive_law.cc  test_material.cc  test_mesh.cc  test_mesh.mpi.sh  test_nodal_field.cc  test_parameter_reader.cc  test_parameter_reader.sh  test_parameter_reader.txt  test_precomputed_kernel.cc  test_precomputed_kernel.txt  test_preint_kernel.cc  test_rate_and_state_law.cc  test_static_communicator_mpi.cc  test_static_communicator_mpi.sh  test_unimat_shear_interface.cc
test/ci/dockerfiles/: README.md
test/ci/dockerfiles/ubuntu_16_04/: Dockerfile
test/ci/dockerfiles/ubuntu_18_04/: Dockerfile
test/ci/dockerfiles/ubuntu_18_04/.openmpi/: mca-params.conf
